--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -177,7 +177,7 @@
   }
 </style>
 
-<main class="main">
+<main class="main" id="main">
   <div class="content">
     <div class="left-side">
       <svg
@@ -227,6 +227,9 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <button (mousedown)="canviaColor('blue')"
+              (mouseup)="canviaColor('orange')"
+      >Canviar color</button>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
@@ -334,3 +337,4 @@
 
 
 <router-outlet />
+
