Exercici 4 Esdeveniments Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -232,6 +232,11 @@
       >Canviar color</button>
       <button (keydown)="acumular($event)">Prem una tecla</button>
       <h1>{{caractersAcumulats}}</h1>
+      <img src="https://cw.gunow.co/wp-content/uploads/2024/07/Captura-de-pantalla-2024-07-17-161315.png"
+           alt="Imatge" (click)="incrementaComptador()"/>
+      <h3>Vegades: {{comptador}}</h3>
+      <button (click)="reiniciarComptador()">Reiniciar comptador</button>
+
 
 
     </div>
