Exercici 5 Esdeveniments Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -236,6 +236,9 @@
            alt="Imatge" (click)="incrementaComptador()"/>
       <h3>Vegades: {{comptador}}</h3>
       <button (click)="reiniciarComptador()">Reiniciar comptador</button>
+      <p>Introdueix la combinacio de tecles QWERTY per mostrar el video</p>
+      <iframe *ngIf="videoVisible" src="https://www.youtube.com/embed/RCA3EfKUJMw?si=rEiIEUqyzZWhESjn"></iframe>
+
 
 
 
